--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-starter",
+  "name": "T-Dom",
   "version": "1.0.0",
-  "description": "Starter project for modern js apps.",
+  "description": "Light weight dom manipulation library.",
   "main": "webpack.config.js",
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --open",
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
+    "fecha": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
